hello Pencil world
When I impulsively started this project the five-and-a-halfish months
ago, I started out with Iron, because that seemed like the most
prominent Rust web framework. But Pencil was on the front page of Hacker
News today and might be easier to learn, so why not impulsively switch
to that?

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,5 @@ version = "0.0.1"
 authors = ["Zack M. Davis <code@zackmdavis.net>"]
 
 [dependencies]
-iron = "0.2.2"
-
+pencil = "0.1.0"
+hyper = "0.7"
